--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   /* ===== STARTING XI chip ===== */
   .starting-chip{
-    position:absolute; left:12px; bottom:12px; z-index:5;
+    position:absolute; left:12px; top:12px; z-index:5;
     background:linear-gradient(90deg,var(--club-red),var(--club-blue));
     color:#fff; font-weight:900; letter-spacing:.6px;
     padding:8px 14px; border-radius:999px;
@@ -248,8 +248,8 @@
   const BENCH_NUMBERS= [12,13,14,15,16,17,18,19,20];
   const coords3412 = [
     [50,90], [80,68], [50,71], [20,68],
-    [88,44], [62,50], [38,50], [12,44],
-    [50,30], [62,12], [38,12]
+    [88,42], [62,48], [38,48], [12,42],
+    [50,30], [62,11], [38,11]
   ];
 
   const el = s => document.querySelector(s);
